[gd_scene load_steps=4 format=3 uid="uid://d3kuf2p6gvovk"]

[ext_resource type="Texture2D" uid="uid://bfyseo7apl6g" path="res://my_assets/tile.png" id="1_h7ac4"]
[ext_resource type="Script" path="res://character_slot.gd" id="1_x2ymd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7enmb"]
size = Vector2(200, 200)

[node name="CharacterSlot" type="Control" node_paths=PackedStringArray("body")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2ymd")
body = NodePath("StaticBody2D")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
scale = Vector2(0.4, 0.4)
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_7enmb")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
z_index = -1
texture = ExtResource("1_h7ac4")

[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_exited"]
